<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.CreateAccountActivity">

    <data>
        <variable
            name="viewModel"
            type="dam_a45977.projeto.ui.viewModel.CreateAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/PokemonRegisterBackgroundCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="550dp"
            app:cardBackgroundColor="@color/brown"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/registerImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/book_solid" />

            <TextView
                android:id="@+id/pokedexTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="145dp"
                android:layout_marginTop="115dp"
                android:fontFamily="@font/poppins"
                android:text="@string/final_project"
                android:textSize="27sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_up"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <TextView
                android:id="@+id/firstNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins"
                android:text="First Name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="text"
                android:text="@={viewModel.firstName}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/emailTitle"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/lastNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:text="Last Name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="text"
                android:text="@={viewModel.lastName}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/emailTitle"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:text="@={viewModel.email}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/emailTitle"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

            <TextView
                android:id="@+id/passwordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/passwordTitle"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <Switch
                android:id="@+id/showHidePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toEndOf="@+id/registerPassword"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/registerAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/brown"
                android:text="@string/create"
                android:onClick="@{() -> viewModel.signUp()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>